WIP of Motor chapter
Signed-off-by: Tanya Gray <tanyagray.nz@gmail.com>

--- a/_data/courses.yml
+++ b/_data/courses.yml
@@ -16,8 +16,8 @@ taster:
     description: Value ranges with dials and lights
     published: false
 
-  - name: flexor
+  - name: motor
     subtitle: Chapter Three
-    title: Flexi Follower
+    title: Motorised 
     description: Synchronising input ranges with rotation
     published: false
